deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: __APP_NAME__
  name: __APP_NAME__
  namespace: __NAMESPACE__
spec:
  progressDeadlineSeconds: 600
  replicas: __REPLICAS__
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: __APP_NAME__
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: __APP_NAME__
    spec:
      imagePullSecrets:
      - name: harbor
      containers:
      - env:
        - name: aliyun_logs_nginx
          value: stdout
        - name: aliyun_nginx_tags
          value: topic=__APP_NAME__
        image: 'harbor.dobest.com/__PROJECT_NAMESPACE__/__PROJECT_NAME__:__VERSION__'
        imagePullPolicy: Always
        name: fe
        resources:
          limits:
            cpu: 20m
            memory: 64Mi
          requests:
            cpu: 20m
            memory: 64Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
