ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: __APP_NAME__
  namespace: __NAMESPACE__
spec:
  tls:
  - hosts:
    - __HOST__
    secretName: sanguosha.com
  rules:
  - host: __HOST__
    http:
      paths:
      - path: /
        backend:
          service:
            name: __APP_NAME__
            port:
              number: 80
        pathType: ImplementationSpecific
